k8s-rpi-apps-ingress/jellyfin-ingress/jellyfin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-s3-shared
  annotations:
    service.cilium.io/global: "true"    
  labels:
    app.kubernetes.io/name: jellyfin-s3
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8096
      targetPort: http
  selector:
    app.kubernetes.io/name: jellyfin-s3
  type: ClusterIP
