k8s-rpi-apps-ingress/jellyfin-ingress/jellyfin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-s3-shared
  annotations:
    avp.kubernetes.io/path: "k8secrets/ingresses"
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: <jellyfins3hostname>.<domainname>
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: jellyfin-s3-shared
              port:
                number: 8096
